# cyclonedx-python

./: .editorconfig  .envrc  .flake8  .gitignore  .isort.cfg  .mypy.ini  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  VERSION  bandit.yml  constraints.lowest.txt  create-virtualenv.sh  deps.lowest.r  generateBom.py  poetry.toml  pyproject.toml  release.sh  requirements-test.txt  requirements.lowest.txt  requirements.txt  setup.py  slow_validation.cdx.json  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-feature_request.md  2-bug_report.md  ValidationError-report.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  manual-release-candidate.yml  python.yml  pythonpackage.yml  release.yml  scorecard.yml  zizmor.yml
_stats/: requirements.csv  requirements.on-demand.csv  requirements.template.csv  run.sh
cyclonedx/: BomGenerator.py  BomValidator.py  client.py
cyclonedx/bom/: generator.py  reader.py  validator.py
cyclonedx/cli/: __init__.py  generateBom.py
cyclonedx/models/: __init__.py  component.py  component_license.py  dependency.py  hash.py  license.py
cyclonedx/schema/: bom-1.0.xsd
cyclonedx_py/: __init__.py  __main__.py  client.py  py.typed
cyclonedx_py/_internal/: __init__.py  cli.py  cli_common.py  conda.py  demo.py  environment.py  license_trove_classifier.py  pipenv.py  poetry.py  requirements.py  trove_classifier_license.py  uv.py
cyclonedx_py/command/: __init__.py  make_bom.py  version.py
cyclonedx_py/exception/: __init__.py  parser.py
cyclonedx_py/parser/: __init__.py  _cdx_properties.py  _debug.py  conda.py  environment.py  pdm.py  pipenv.py  poetry.py  requirements.py
cyclonedx_py/schema/: bom-1.0.xsd  bom-1.1.xsd  bom-1.4.schema.json  bom-1.4.xsd
cyclonedx_py/utils/: conda.py  output.py
docs/: changelog.rst  conf.py  index.rst  install.rst  requirements.txt  support.rst  upgrading.rst  usage-make-bom.rst  usage-version.rst  usage.rst
package_aliases/: README.md  publishing.md
package_aliases/cyclonedx-py/: .gitignore  README.md  pyproject.toml
tests/: __init__.py  base.py  test_bom_reader.py  test_cyclonedx.py  test_cyclonedx_json.py  test_cyclonedx_xml.py  test_metadata.py  test_parser_conda.py  test_parser_environment.py  test_parser_pipenv.py  test_parser_poetry.py  test_parser_requirements.py  test_utils.py  test_utils_conda.py
tests/_data/: .gitattributes  requirements-duplicate.txt  requirements-floating.txt  requirements-frozen.txt  requirements-local.txt  requirements-url.txt  requirements-with-hashes.txt  requirements-without-pinned-versions.txt
tests/_data/infiles/_helpers/local_pckages/a/: README.md  module_a.py  pyproject.toml
tests/_data/infiles/_helpers/local_pckages/b/: module_b.py  pyproject.toml
tests/_data/infiles/_helpers/local_pckages/c/: .gitignore  module_c.py  pyproject.toml
tests/_data/infiles/_helpers/local_pckages/with-license-pep639_regression-issue868/: .editorconfig  .gitattributes  README.md  pyproject.toml
tests/_data/infiles/_helpers/local_pckages/with-license-pep639_regression-issue868/my_licenses/: richtext.rtf  utf-16be_withBOM.txt  utf-16le_withBOM.txt  utf-8_noBOM.txt  utf-8_withBOM.txt
tests/_data/infiles/environment/normalize-packagename/: init.py  pinning.txt  pyproject.toml
tests/_data/infiles/environment/regression_issue717/: init.py  pinning.txt  pyproject.toml
tests/_data/infiles/environment/via-pdm/: init.py  pdm.toml  pyproject.toml
tests/_data/infiles/environment/via-poetry/: init.py  poetry.toml  pyproject.toml
tests/_data/infiles/environment/with-license-bad-file-recoverable/badlicdepends/: .gitattributes  GoodLicense.txt  UTF16License.txt  init.py  pyproject.toml
tests/_data/infiles/environment/with-license-file/: init.py  pyproject.toml
tests/_data/infiles/environment/with-license-pep639/: AUTHORS.example  LICENCE.dummy  LICENSE.txt  NOTICE  init.py  pinning.txt  pyproject.toml
tests/_data/infiles/environment/with-license-pep639/LICENSES/: readme.md
tests/_data/infiles/environment/with-license-pep639/licenses_a/: LICENSE.CC0  LICENSE.MIT
tests/_data/infiles/environment/with-license-pep639/licenses_b/: LICENSE.md
tests/_data/infiles/environment/with-license-pep639/licenses_b/legal/: NOTICE.txt
tests/_data/infiles/environment/with-license-text/: init.py  pyproject.toml
tests/_data/infiles/pipenv/with-extras/: Pipfile  pyproject.toml
tests/_data/infiles/poetry/private-packges/lock10/: pyproject.toml
tests/_data/infiles/poetry/private-packges/lock20/: pyproject.toml
tests/_data/infiles/requirements/: local.txt  nested.txt  private-packages.txt  pyproject.toml  with-comments.txt  with-extras.txt  with-hashes.txt  with-urls.txt  without-pinned-versions.txt
tests/fixtures/: .editorconfig  bom_v1.0_setuptools.xml  bom_v1.1_setuptools.xml  bom_v1.2_setuptools.json  bom_v1.2_setuptools.xml  bom_v1.3_setuptools-conda.json  bom_v1.3_setuptools-conda.xml  bom_v1.3_setuptools.json  bom_v1.3_setuptools.xml  bom_v1.4_setuptools.json  bom_v1.4_setuptools.xml  conda-list-broken.txt  conda-list-build-number-text.txt  conda-list-explicit-md5.txt  conda-list-explicit-simple.txt  conda-list-issue462.json  conda-list-output.json  pipfile-lock-no-index-example.txt  pipfile-lock-simple.txt  poetry-dev-dep.txt  poetry-lock-simple.txt  poetry-lock-v2-simple.txt  poetry-lock11-simple.txt  poetry-lock20-simple.txt  poetry-pytoml.txt  requirements-example-1.txt  requirements-local-and-remote-packages.txt  requirements-local-installed-package.txt  requirements-local-packages.txt  requirements-multilines-with-comments.txt  requirements-nested.txt  requirements-simple.txt  requirements-with-comments.txt  requirements-with-hashes.txt  requirements-with-urls.txt  requirements-without-pinned-versions.txt
tests/functional/: test_license_trove_classifier.py
tests/integration/: __init__.py  test_can_call_module.py  test_cli.py  test_cli_environment.py  (+9 more)
(+127 files in other folders)
