[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
name = "testing-requirements"
version = "0.1.0"
description = "a packag with all meta"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
homepage = "https://oss.acme.org/my-project/"
repository = "https://oss.acme.org/my-project.git"
documentation = "https://oss.acme.org/my-project/docs/"
"Bug Tracker" = "https://oss.acme.org/my-project/bugs/"
"Funding" = "https://oss.acme.org/my-project/funding/"
"Change log" = "https://oss.acme.org/my-project/changelog/"

#  dynamic = [] # TODO

authors = ["Your Name <you@example.com>", "My Name"]
maintainers = [
  "John Smith <johnsmith@example.org>",
  "Jane Smith <janesmith@example.org>",
]

keywords = ["packaging", "pipenv", "test"]
# classifiers = [] # TODO

# dependencies = [] # TODO
# optional-dependencies = [] # TODO

# entry-point = {} # TODO

# gui-scripts = {} # TODO
# scripts = {} # TODO

