[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
name = "with-extras"
version = "0.1.0"
description = "depenndencies with extras"

dependencies = [
  "cyclonedx-python-lib[xml-Validation]"   # extra name is expected to be normalized
]
