[project]
name = "package-a"
version = "23.42"
description = "some package A"
license = { text = "some license text" }  # intentional not a SPDX ID/Expression
authors = []
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["module_a"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
