[build-system]
# Known broken version
requires = ["setuptools == 78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "badlicdepends"
version = "0.1"
# UTF-16 is simply bad encoding
# RTF is technically 7-bit ASCII, but has application/rtf mimetype.
license-files = ["GoodLicense.txt", "License.rtf", "UTF16License.txt"]
